# NER-legal-doc-vi

./: PHASES.md  README.md  pyproject.toml
data/processed/: review_queue.jsonl  summary.json  test.jsonl  train.jsonl  val.jsonl
docs/: phase-01-done.md
scripts/: convert_legal_xlsx.py  infer_demo.py  review_queue_report.py  run_ocr_pipeline.py  train_phobert_ner.py  validate_phase1_dataset.py
src/ner_pipeline/: __init__.py  convert.py
src/ocr_pipeline/: __init__.py  layout_filter.py  normalize.py  paddle_engine.py  pdf_extract.py  run_pipeline.py  types.py
src/vn_legal_ner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_convert_smoke.py  test_layout_filter.py  test_pdf_fallback.py
tmp_smoke/: demo.xlsx
