[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-legal-ner"
version = "0.1.0"
description = "Vietnamese legal document NER pipeline (convert + PhoBERT training)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
train = [
  "transformers>=4.45",
  "datasets>=2.21",
  "evaluate>=0.4",
  "seqeval>=1.2",
  "torch>=2.2",
]
fuzzy = [
  "rapidfuzz>=3.9",
]
ocr = [
  "pymupdf>=1.24",
  "paddleocr>=2.7",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
